--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^2.9.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^0.27.2"
+	}
 }
